RESOLVED FIXED 33597
[Android] [Qt] The JSC ScriptController does not consider Touch Events user gestures.
https://bugs.webkit.org/show_bug.cgi?id=33597
Summary [Android] [Qt] The JSC ScriptController does not consider Touch Events user g...
Ben Murdoch
Reported 2010-01-13 06:55:19 PST
As with other UI events (such as keyboard and mouse events) the ScriptController should consider touch events when determining if an event is a user gesture. I have a small patch ready to fix this.
Attachments
Proposed Patch. (1.60 KB, patch)
2010-01-13 07:18 PST, Ben Murdoch
no flags
Patch sans-tab. (1.59 KB, patch)
2010-01-13 07:23 PST, Ben Murdoch
no flags
Ben Murdoch
Comment 1 2010-01-13 07:18:05 PST
Created attachment 46456 [details] Proposed Patch.
WebKit Review Bot
Comment 2 2010-01-13 07:20:49 PST
Attachment 46456 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 1
Ben Murdoch
Comment 3 2010-01-13 07:23:47 PST
Created attachment 46457 [details] Patch sans-tab.
Simon Hausmann
Comment 4 2010-01-13 07:38:43 PST
Comment on attachment 46457 [details] Patch sans-tab. r=me
Ben Murdoch
Comment 5 2010-01-13 07:41:56 PST
Comment on attachment 46457 [details] Patch sans-tab. cq+ for landing.
WebKit Commit Bot
Comment 6 2010-01-13 09:03:43 PST
Comment on attachment 46457 [details] Patch sans-tab. Clearing flags on attachment: 46457 Committed r53191: <http://trac.webkit.org/changeset/53191>
WebKit Commit Bot
Comment 7 2010-01-13 09:03:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.