2010-01-13  Ben Murdoch  <benm@google.com>

Reviewed by Simon Hausmann.

        [Android] [Qt] The JSC ScriptController does not consider Touch Events user gestures.
        https://bugs.webkit.org/show_bug.cgi?id=33597

        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::processingUserGestureEvent): Add the touch event types (touchstart, touchmove and touchend) to the set of events that are considered user gestures.

Canonical link: https://commits.webkit.org/44599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53191 268f45cc-cd09-0410-ab3c-d52691b4dbfc